# Self-Healing-Data-Pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: agent_pr_approve.yml  agent_pr_check.yml  agent_pr_outcomes.yml  eval.yml
airflow/dags/: example_failing_dag.py
airflow/plugins/: shdpa_callback.py
dbt/adapters/: shdpa_dbt_callback.py
dbt/macros/: shdpa_on_run_end.sql
docs/: 00_initial_plan.md  01_revised_plan.md  02_premortem.md  03_production_roadmap.md  04_runbook.md  05_threat_model.md  06_scaling_to_large_dags.md
docs/demo/: demo.cast
docs/pdf/: explainer.html
docs/results/: anthropic_claude_haiku.md  anthropic_claude_sonnet_4.md  openai_gpt_4o_mini.md  summary.md  v3_run_anthropic_n20.jsonl  v3_run_anthropic_n20.md
ops/grafana/: shdpa.json
prompts/v1/: diagnose.md
prompts/v2/: diagnose.md
prompts/v3/: diagnose.md  triage.md
scripts/: generate_pdf.py
src/shdpa/: __init__.py  cli.py  models.py  serve.py
src/shdpa/agent/: __init__.py  guardrails.py  loop.py  prompts.py
src/shdpa/chaos/: __init__.py  adversarial.py  inject.py  wild.py
tests/: test_agent_smoke.py  test_airflow_api.py  test_airflow_callback.py  test_chaos.py  test_cost_meter.py  test_dbt_callback.py  test_escalate.py  test_guardrails.py  test_metrics.py  test_model_routing.py  test_models.py  test_pr_strict.py  test_prompt_regression.py  test_provider_failover.py  test_real_llm_providers.py  test_redact.py  test_refactor_cap.py  test_repo_allow_list.py  test_sandbox.py  test_secrets.py  test_storage.py
(+30 files in other folders)
