[project]
name = "shdpa"
version = "0.1.0"
description = "Self-Healing Data Pipeline Agent — diagnoses orchestrated pipeline failures and drafts fixes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Antarang Sharma" }]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "click>=8.1",
    "rich>=13.7",
    "tabulate>=0.9",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.34"]
ollama = ["ollama>=0.3"]
all = ["openai>=1.30", "anthropic>=0.34", "ollama>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-tabulate",
]

[project.scripts]
shdpa = "shdpa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shdpa"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["fixtures/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
